2003-06-11  Derek Price  <derek@ximbiot.com>

	* Makefile.in: Regenerate for new configure.in.

2003-06-11  Larry Jones  <lawrence.jones@eds.com>

	* sanity.sh: Change warning messages to note that defective tools
	can result in defective results, both pass and fail.  Also change
	"which" to "that" for errant grammar pedants.

2003-06-10  Derek Price  <derek@ximbiot.com>

	* recurse.c (start_recursion): Avoid unneeded allocation.

2003-06-10  Mark D. Baushke  <mdb@gnu.org>

	* rcs.c (RCS_setlocalid,RCS_setincexc): New functions to support
	LocalKeyword and KeywordExpand config keywords.

	* rcs.h (RCS_setlocalid,RCS_setincexc): New prototypes.

	* parseinfo.c (parse_config): Added LocalKeyword
	and KeywordExpand keywords.

	* sanity.sh (keywordexpand): New CVSROOT/config tests for
	LocalKeyword and KeywordExpand options.

2003-06-09  Derek Price  <derek@ximbiot.com>

	* rcs.c (RCS_delete_revs): Reference WOE32 rather than WIN32 in
	accordance with the GNU convention to avoid implying that we consider
	the Microsoft Windows Operating Environment any sort of "win".

2003-06-09  Derek Price  <derek@ximbiot.com>

	* filesubr.c (cvs_temp_file): Tidy a comment.

2003-06-09  Derek Price  <derek@ximbiot.com>

	* patch.c (patch_fileproc): Don't assume the content of files is
	different just because the revision number is different.
	* sanity.sh (rdiff-add-remove-nodiff): New tests for the above.
	(Report & original patches from Paul Edwards <kerravon@w3.to>.)

2003-06-04  Derek Price  <derek@ximbiot.com>

	* cvs.h (locate_file_in_dir): New proto.
	(locate_rcs): Move proto...
	* rcs.h: ...here.
	* filesubr.c (locate_rcs): Move function...
	* rcs.c: ...here for Windows.
	* filesubr.c (locate_file_in_dir): Move function...
	* subr.c: ...here for Windows.

2003-06-02  Derek Price  <derek@ximbiot.com>

	* sanity.sh: Add comments re portability of test -x & test -e.  Don't
	bother with quotes in arguments to test when we have laready checked
	the variables for empty content.
